--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="{{url_for('classify')}}">Know Your Personality</a>
                     </li>
                     <li class="nav-item mt-4">
-                        <a class="nav-link" href="https://github.com/ank090/personality_classsifier" target="blank">Source code</a>
+                        <a class="nav-link" href="https://github.com/ank090/personality-_classifier" target="blank">Source code</a>
                     </li>
                 </ul>
             </div>
@@ -55,9 +55,9 @@
                 <div class="row py-4 d-flex align-items-center">
 
                     <div class="col-md-12 text-center">
-                        <a href="https://github.com/ank090"><i class="fab fa-github white-text mr-4"></i></a>
-                        <a href="https://www.linkedin.com/in/ankit-verma-488647226/"><i class="fab fa-linkedin-in white-text mr-4"> </i></a>
-                        <a href="https://instagram.com/_ankit__verma__?utm_medium=copy_link"><i class="fab fa-instagram white-text"> </i></a>
+                        <a href="https://github.com/ank090" target="blank"><i class="fab fa-github white-text mr-4"></i></a>
+                        <a href="https://www.linkedin.com/in/ankit-verma-488647226/" target="blank"><i class="fab fa-linkedin-in white-text mr-4"> </i></a>
+                        <a href="https://instagram.com/_ankit__verma__?utm_medium=copy_link" target="blank"><i class="fab fa-instagram white-text"> </i></a>
                     </div>
 
                 </div>
