changed file structure

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -37,7 +37,7 @@
 
 <p><b>Your Personality Type:</b> When you decide on your preference in each category, you have your own personality type, which can be expressed as a code with four letters.</p>
 
-<p>The 16 personality types of the Myers-Briggs Type Indicator® instrument are listed here as they are often shown in what is called a "<a href="{{url_for('traits')}}" id="table_link">type table</a>."</p>
+<p>The 16 personality types of the Myers-Briggs Type Indicator® instrument are listed here as they are often shown in what is called a "<a href="{{url_for('routes.traits')}}" id="table_link">type table</a>."</p>
  
 <img src="/static/16_traits.jpg" alt="16_traits" class="traits">
 
