--- a/website/static/index.css
+++ b/website/static/index.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 
 #para{
 
@@ -43,13 +49,16 @@ b{
 }
 
 .navbar{
-        height: 100px;
+        height: 60px;
+        background:#89B5AF;
 }
 
-#navbarNav{
+.navbar-nav{
     font-size: 17.5px;
     letter-spacing: 1px;
     word-spacing: 2px;
+    
+
 
     
 }
@@ -85,4 +94,50 @@ b{
     word-spacing: 1.5px;
     
    
+}
+
+#already_acc{
+    text-align:center
+}
+
+#emailHelp{
+    font-weight: normal;
+    word-spacing: 1px;
+    font-size:15px
+}
+
+.form-control{
+    width:25%;
+}
+
+h1{
+    font-weight: 150px;
+    word-spacing: 1.5px;
+    letter-spacing:1px;
+    margin-bottom:20px
+}
+
+#login_png{
+        
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10px;
+    width:20%;
+    height:20%;
+}
+
+#error_msg{
+    
+    background-color: #d63934e0;
+    margin-left: 520px;
+    margin-right: 520px;
+    padding: 7px;
+    font-weight:bolder;
+    letter-spacing: 1px;
+    
+}
+
+#logout{
+    margin-left: 300px;
 }
