--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#" id="title">Personality Classifier</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -33,16 +33,20 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item mx-3 mt-4">
-                        <a class="nav-link active" aria-current="page" href="{{url_for('home')}}">Home</a>
+                    <li class="nav-item ml-5 mr-2 mt-3">
+                        <a class="nav-link active" aria-current="page" href="{{url_for('routes.home')}}">Home</a>
                     </li>
-                    <li class="nav-item mx-3 mt-4">
-                        <a class="nav-link" href="{{url_for('classify')}}">Know Your Personality</a>
+                    <li class="nav-item  mt-3">
+                        <a class="nav-link" href="{{url_for('routes.classify')}}">Know Your Personality</a>
                     </li>
-                    <li class="nav-item mt-4">
+                    <li class="nav-item mt-3">
                         <a class="nav-link" href="https://github.com/ank090/personality-_classifier" target="blank">Source code</a>
                     </li>
+                    <li class="nav-item mt-3" style="float: right;" id="logout">
+                        
+                    </li>
                 </ul>
+                <a class="nav-link" href="{{url_for('authentication.logout')}}">Logout</a>
             </div>
         </div>
     </nav>
