--- a/website/templates/layout.html
+++ b/website/templates/layout.html
@@ -11,6 +11,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <!-- Google Fonts -->
@@ -26,42 +27,53 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#" id="title">Personality Classifier</a>
+            <a class="navbar-brand" href="{{url_for('routes.home')}}" id="title">Personality Classifier</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
+
                 <ul class="navbar-nav">
-                    <li class="nav-item ml-5 mr-2 mt-3">
+                    <li class="nav-item ml- mr-2 mt-3">
                         <a class="nav-link active" aria-current="page" href="{{url_for('routes.home')}}">Home</a>
                     </li>
                     <li class="nav-item  mt-3">
                         <a class="nav-link" href="{{url_for('routes.classify')}}">Know Your Personality</a>
                     </li>
                     <li class="nav-item mt-3">
-                        <a class="nav-link" href="https://github.com/ank090/personality-_classifier" target="blank">Source code</a>
+                        <a class="nav-link" href="https://github.com/ank090/personality-_classifier"
+                            target="blank">Source code</a>
                     </li>
-                    <li class="nav-item mt-3" style="float: right;" id="logout">
-                        
-                    </li>
-                </ul>
-                <a class="nav-link" href="{{url_for('authentication.logout')}}">Logout</a>
-            </div>
+
+                    <li class="nav-item dropdown   mt-3"id="drop">
+                        <a class="nav-link dropdown-toggle" href="#" role="button"data-toggle="dropdown"aria-expanded="false">{{user}}</a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="{{url_for('routes.dashboard')}}">Dashboard</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{url_for('authentication.logout')}}">logout</a></li>
+                        </ul>
+                 </li> 
+                 </ul>      
+             </div>
+            
+        </div>
         </div>
     </nav>
-
     {% block body %} {% endblock %}
-    <footer class="page-footer bg-dark">
+    <footer class="page-footer bg-dark" id="footer">
 
-        <div  class="patti">
+        <div class="patti">
             <div class="container">
                 <div class="row py-4 d-flex align-items-center">
 
                     <div class="col-md-12 text-center">
-                        <a href="https://github.com/ank090" target="blank"><i class="fab fa-github white-text mr-4"></i></a>
-                        <a href="https://www.linkedin.com/in/ankit-verma-488647226/" target="blank"><i class="fab fa-linkedin-in white-text mr-4"> </i></a>
-                        <a href="https://instagram.com/_ankit__verma__?utm_medium=copy_link" target="blank"><i class="fab fa-instagram white-text"> </i></a>
+                        <a href="https://github.com/ank090" target="blank"><i
+                                class="fab fa-github white-text mr-4"></i></a>
+                        <a href="https://www.linkedin.com/in/ankit-verma-488647226/" target="blank"><i
+                                class="fab fa-linkedin-in white-text mr-4"> </i></a>
+                        <a href="https://instagram.com/_ankit__verma__?utm_medium=copy_link" target="blank"><i
+                                class="fab fa-instagram white-text"> </i></a>
                     </div>
 
                 </div>
@@ -74,10 +86,11 @@
                 <div class="col-md-3 mx-auto mb-4">
                     <h6 class="text-uppercase font-weight-bold">Ankit Verma</h6>
                     <hr class="bg-success mb-4 mt-0 d-inline-block mx-auto" style="width: 125px; height: 2px">
-                    <p class="mt-2">A python developer with loves to create new things and learn new skills with love of Photography and sports.</p>
+                    <p class="mt-2">A python developer with loves to create new things and learn new skills with love of
+                        Photography and sports.</p>
                 </div>
 
-            
+
 
                 <div class="col-md-3 mx-auto mb-4">
                     <h6 class="text-uppercase font-weight-bold">Contact</h6>
@@ -85,14 +98,14 @@
                     <ul class="list-unstyled">
                         <li class="my-2"><i class="fas fa-home mr-3"></i> Bhilai, Chhattisgarh, India</li>
                         <li class="my-2"><i class="fas fa-envelope mr-3"></i> ankitver090@gmail.com</li>
-                        <li class="my-2"><i class="fas fa-phone mr-3"></i>700XXXXXX</li>      
+                        <li class="my-2"><i class="fas fa-phone mr-3"></i>700XXXXXX</li>
                     </ul>
                 </div>
             </div>
         </div>
 
         <div class="footer-copyright text-center">
-          
+
             <p>Designed by The Ankit Verma</p>
         </div>
     </footer>
@@ -108,7 +121,6 @@
     <!-- MDB core JavaScript -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.0/js/mdb.min.js"></script>
-
 
 </body>
 
